# newrelic-playground

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01 - New Relic Playground - NRQL.ipynb  02 - New Relic Playground - Dashboards.ipynb  03 - New Relic Playground - Alertas.ipynb  03 - New Relic Playground - Niveles de servicio.ipynb  New Relic Playground.ipynb
